[gd_scene load_steps=10 format=3 uid="uid://cuwycg7m1kwgc"]

[ext_resource type="Texture2D" uid="uid://bd8voq3nx1kah" path="res://Assets/Sprites/Boss1.png" id="1_vy42e"]
[ext_resource type="Script" path="res://Scenes/Actors/Enemy/Boss1.gd" id="1_wnura"]
[ext_resource type="PackedScene" uid="uid://bg2kxmxyvb017" path="res://Scenes/Weapons/SixShooter/SixShooter.tscn" id="1_wq5nw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vqg4c"]
size = Vector2(33, 29.12)

[sub_resource type="Animation" id="Animation_uatg8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_0kf1s"]
resource_name = "gatling_spin"
length = 0.7
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_wkyih"]
resource_name = "slam"
length = 3.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shadow:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1, 1.4, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, false, true, true, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.6, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(2.81552, 2.84273), Vector2(2.81552, 2.84273), Vector2(2.48572, 2.50382), Vector2(2.95552, 3.02282), Vector2(3.7, 3.7), Vector2(2.947, 3), Vector2(3.1, 3.279), Vector2(3.1, 3.163), Vector2(2.958, 3.003), Vector2(2.816, 2.843)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodySprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(2.6, 2.6), Vector2(3.64, 2.3), Vector2(2.34, 2.3), Vector2(2.6, 2.6), Vector2(3.6, 3.6), Vector2(2.947, 3), Vector2(2.8, 2.8), Vector2(2.6, 2.6), Vector2(2.94, 2.76), Vector2(3.36, 3.1), Vector2(4.06444, 3.17111), Vector2(3.80889, 3.09222), Vector2(3.55333, 3.01333), Vector2(3.07667, 2.80667), Vector2(2.6, 2.6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yfgbx"]
_data = {
"RESET": SubResource("Animation_uatg8"),
"gatling_spin": SubResource("Animation_0kf1s"),
"slam": SubResource("Animation_wkyih")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mk1ep"]
size = Vector2(82.5, 76.5)

[node name="Boss" type="CharacterBody2D"]
texture_filter = 1
scale = Vector2(2, 2)
collision_layer = 16
collision_mask = 116
script = ExtResource("1_wnura")
hp = 50
metadata/_edit_lock_ = true

[node name="Shadow" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0.458824, 0.458824, 0.458824, 1)
texture_filter = 2
scale = Vector2(2.816, 2.843)
texture = ExtResource("1_vy42e")
hframes = 3
region_rect = Rect2(1.7009, 1.78331, 4.59444, 4.59444)

[node name="SixShooter7" parent="." instance=ExtResource("1_wq5nw")]
position = Vector2(14.5, 31.5)
scale = Vector2(0.796, 0.95)
equipped = true
metadata/_edit_lock_ = true

[node name="SixShooterSprite" parent="SixShooter7" index="1"]
visible = false

[node name="ShootingAnimator" parent="SixShooter7" index="4"]
root_node = NodePath("../../SixShooter4")

[node name="SixShooter6" parent="." instance=ExtResource("1_wq5nw")]
position = Vector2(17, 31.5)
scale = Vector2(0.796, 0.95)
equipped = true
metadata/_edit_lock_ = true

[node name="SixShooterSprite" parent="SixShooter6" index="1"]
visible = false

[node name="SixShooter5" parent="." instance=ExtResource("1_wq5nw")]
position = Vector2(19.5, 31.5)
scale = Vector2(0.796, 0.95)
equipped = true
metadata/_edit_lock_ = true

[node name="SixShooterSprite" parent="SixShooter5" index="1"]
visible = false

[node name="SixShooter4" parent="." instance=ExtResource("1_wq5nw")]
position = Vector2(22, 31.5)
scale = Vector2(0.838, 0.95)
equipped = true
metadata/_edit_lock_ = true

[node name="SixShooterSprite" parent="SixShooter4" index="1"]
visible = false

[node name="SixShooter3" parent="." instance=ExtResource("1_wq5nw")]
position = Vector2(24.5, 31.5)
scale = Vector2(0.796, 0.95)
equipped = true
metadata/_edit_lock_ = true

[node name="SixShooterSprite" parent="SixShooter3" index="1"]
visible = false

[node name="SixShooter2" parent="." instance=ExtResource("1_wq5nw")]
position = Vector2(27, 31.5)
scale = Vector2(0.796, 0.95)
equipped = true
metadata/_edit_lock_ = true

[node name="SixShooterSprite" parent="SixShooter2" index="1"]
visible = false

[node name="SixShooter1" parent="." instance=ExtResource("1_wq5nw")]
position = Vector2(29.5, 31.5)
scale = Vector2(0.795899, 0.949906)
equipped = true
metadata/_edit_lock_ = true

[node name="SixShooterSprite" parent="SixShooter1" index="1"]
visible = false

[node name="BodySprite" type="Sprite2D" parent="."]
scale = Vector2(2.6, 2.6)
texture = ExtResource("1_vy42e")
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 16
visibility_layer = 112
position = Vector2(-0.5, -6.4)
scale = Vector2(2.5, 2.5)
shape = SubResource("RectangleShape2D_vqg4c")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yfgbx")
}

[node name="PhaseSwitch" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="TimerSlam" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="BulletDetector" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 116

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletDetector"]
position = Vector2(-2.25, -7.75)
shape = SubResource("RectangleShape2D_mk1ep")

[connection signal="shooting" from="." to="SixShooter7" method="_on_shooting"]
[connection signal="shooting" from="." to="SixShooter6" method="_on_shooting"]
[connection signal="shooting" from="." to="SixShooter5" method="_on_shooting"]
[connection signal="shooting" from="." to="SixShooter4" method="_on_shooting"]
[connection signal="shooting" from="." to="SixShooter3" method="_on_shooting"]
[connection signal="shooting" from="." to="SixShooter2" method="_on_shooting"]
[connection signal="shooting" from="." to="SixShooter1" method="_on_shooting"]
[connection signal="timeout" from="PhaseSwitch" to="." method="_on_phase_switch_timeout"]
[connection signal="body_entered" from="BulletDetector" to="." method="_on_bullet_detector_body_entered"]

[editable path="SixShooter7"]
[editable path="SixShooter6"]
[editable path="SixShooter5"]
[editable path="SixShooter4"]
[editable path="SixShooter3"]
[editable path="SixShooter2"]
[editable path="SixShooter1"]
